finish page tags

--- a/news.html
+++ b/news.html
@@ -55,18 +55,18 @@
                 </div>
                 <nav>
                     <ul>
-                        <li><a title="صفحه نخست" href=""> صفحه نخست </a></li>
-                        <li><a title="اخبار" href="#"> اخبار </a></li>
-                        <li><a title="سیاست" href="#"> سیاست</a></li>
-                        <li><a title="بین الملل" href="#"> بین الملل</a></li>
-                        <li><a title="فرهنگ" href="#"> فرهنگ </a></li>
-                        <li><a title="اقتصاد" href="#"> اقتصاد</a></li>
-                        <li><a title="اجتماعی" href="#"> اجتماعی </a></li>
-                        <li><a title="ورزش" href="#"> ورزش </a></li>
-                        <li><a title="عکس" href="#"> عکس </a></li>
-                        <li><a title="چندرسانه ای" href="#"> چندرسانه ای </a></li>
-                        <li><a title="نویسندگان مثلث" href="#"> نویسندگان مثلث </a></li>
-                        <li><a title="تبلیغات" href="#"> تبلیغات </a></li>
+                        <li><a title="صفحه نخست" href="#"> صفحه نخست </a></li>
+                        <li><a title="اخبار" href="./service.html"> اخبار </a></li>
+                        <li><a title="سیاست" href="./service.html"> سیاست</a></li>
+                        <li><a title="بین الملل" href="./service.html"> بین الملل</a></li>
+                        <li><a title="فرهنگ" href="./service.html"> فرهنگ </a></li>
+                        <li><a title="اقتصاد" href="./service.html"> اقتصاد</a></li>
+                        <li><a title="اجتماعی" href="./service.html"> اجتماعی </a></li>
+                        <li><a title="ورزش" href="./service.html"> ورزش </a></li>
+                        <li><a title="عکس" href="./service.html"> عکس </a></li>
+                        <li><a title="چندرسانه ای" href="./service.html"> چندرسانه ای </a></li>
+                        <li><a title="نویسندگان مثلث" href="./service.html"> نویسندگان مثلث </a></li>
+                        <li><a title="تبلیغات" href="./service.html"> تبلیغات </a></li>
                     </ul>
                 </nav>
             </div>
@@ -78,17 +78,17 @@
                 <nav>
                     <ul>
                         <li><a title="صفحه نخست" href="#"> صفحه نخست </a></li>
-                        <li><a title="اخبار" href="#"> اخبار </a></li>
-                        <li><a title="سیاست" href="#"> سیاست</a></li>
-                        <li><a title="بین الملل" href="#"> بین الملل</a></li>
-                        <li><a title="فرهنگ" href="#"> فرهنگ </a></li>
-                        <li><a title="اقتصاد" href="#"> اقتصاد</a></li>
-                        <li><a title="اجتماعی" href="#"> اجتماعی </a></li>
-                        <li><a title="ورزش" href="#"> ورزش </a></li>
-                        <li><a title="عکس" href="#"> عکس </a></li>
-                        <li><a title="چندرسانه ای" href="#"> چندرسانه ای </a></li>
-                        <li><a title="نویسندگان مثلث" href="#"> نویسندگان مثلث </a></li>
-                        <li><a title="تبلیغات" href="#"> تبلیغات </a></li>
+                        <li><a title="اخبار" href="./service.html"> اخبار </a></li>
+                        <li><a title="سیاست" href="./service.html"> سیاست</a></li>
+                        <li><a title="بین الملل" href="./service.html"> بین الملل</a></li>
+                        <li><a title="فرهنگ" href="./service.html"> فرهنگ </a></li>
+                        <li><a title="اقتصاد" href="./service.html"> اقتصاد</a></li>
+                        <li><a title="اجتماعی" href="./service.html"> اجتماعی </a></li>
+                        <li><a title="ورزش" href="./service.html"> ورزش </a></li>
+                        <li><a title="عکس" href="./service.html"> عکس </a></li>
+                        <li><a title="چندرسانه ای" href="./service.html"> چندرسانه ای </a></li>
+                        <li><a title="نویسندگان مثلث" href="./service.html"> نویسندگان مثلث </a></li>
+                        <li><a title="تبلیغات" href="./service.html"> تبلیغات </a></li>
                     </ul>
                 </nav>
             </div>
@@ -111,7 +111,7 @@
                     </div>
                 </div>
                 <header>
-                    <span class="up-title" > تمرین صفحه اخبار  </span>
+                    <h3 class="up-title" > امروز رئیس جمهور در تمامی نشست ها برخواست کرد و گفت :  </h3>
                     <h1 class="title">دانلود سریال کرگدن / دانلود قسمت اول سریال کرگدن</h1>
                     <div class="lead">دانلود سریال کرگدن دانلود قسمت اول سریال کرگدن دانلود قسمت 1 سریال کرگدن</div>
                     <div class="primary-file"> <a href="#"><img src="./images/kargadan.jpg" alt="">
