--- a/index.html
+++ b/index.html
@@ -55,17 +55,17 @@
                     <nav>
                         <ul>
                             <li><a title="صفحه نخست" href="#"> صفحه نخست </a></li>
-                            <li><a title="اخبار" href="#"> اخبار </a></li>
-                            <li><a title="سیاست" href="#"> سیاست</a></li>
-                            <li><a title="بین الملل" href="#"> بین الملل</a></li>
-                            <li><a title="فرهنگ" href="#"> فرهنگ </a></li>
-                            <li><a title="اقتصاد" href="#"> اقتصاد</a></li>
-                            <li><a title="اجتماعی" href="#"> اجتماعی </a></li>
-                            <li><a title="ورزش" href="#"> ورزش </a></li>
-                            <li><a title="عکس" href="#"> عکس </a></li>
-                            <li><a title="چندرسانه ای" href="#"> چندرسانه ای </a></li>
-                            <li><a title="نویسندگان مثلث" href="#"> نویسندگان مثلث </a></li>
-                            <li><a title="تبلیغات" href="#"> تبلیغات </a></li>
+                            <li><a title="اخبار" href="./service.html"> اخبار </a></li>
+                            <li><a title="سیاست" href="./service.html"> سیاست</a></li>
+                            <li><a title="بین الملل" href="./service.html"> بین الملل</a></li>
+                            <li><a title="فرهنگ" href="./service.html"> فرهنگ </a></li>
+                            <li><a title="اقتصاد" href="./service.html"> اقتصاد</a></li>
+                            <li><a title="اجتماعی" href="./service.html"> اجتماعی </a></li>
+                            <li><a title="ورزش" href="./service.html"> ورزش </a></li>
+                            <li><a title="عکس" href="./service.html"> عکس </a></li>
+                            <li><a title="چندرسانه ای" href="./service.html"> چندرسانه ای </a></li>
+                            <li><a title="نویسندگان مثلث" href="./service.html"> نویسندگان مثلث </a></li>
+                            <li><a title="تبلیغات" href="./service.html"> تبلیغات </a></li>
                         </ul>
                     </nav>
                 </div>
@@ -77,17 +77,17 @@
                 <nav>
                     <ul>
                         <li><a title="صفحه نخست" href="#"> صفحه نخست </a></li>
-                        <li><a title="اخبار" href="./news.html"> اخبار </a></li>
-                        <li><a title="سیاست" href="#"> سیاست</a></li>
-                        <li><a title="بین الملل" href="#"> بین الملل</a></li>
-                        <li><a title="فرهنگ" href="#"> فرهنگ </a></li>
-                        <li><a title="اقتصاد" href="#"> اقتصاد</a></li>
-                        <li><a title="اجتماعی" href="#"> اجتماعی </a></li>
-                        <li><a title="ورزش" href="#"> ورزش </a></li>
-                        <li><a title="عکس" href="#"> عکس </a></li>
-                        <li><a title="چندرسانه ای" href="#"> چندرسانه ای </a></li>
-                        <li><a title="نویسندگان مثلث" href="#"> نویسندگان مثلث </a></li>
-                        <li><a title="تبلیغات" href="#"> تبلیغات </a></li>
+                        <li><a title="اخبار" href="./service.html"> اخبار </a></li>
+                        <li><a title="سیاست" href="./service.html"> سیاست</a></li>
+                        <li><a title="بین الملل" href="./service.html"> بین الملل</a></li>
+                        <li><a title="فرهنگ" href="./service.html"> فرهنگ </a></li>
+                        <li><a title="اقتصاد" href="./service.html"> اقتصاد</a></li>
+                        <li><a title="اجتماعی" href="./service.html"> اجتماعی </a></li>
+                        <li><a title="ورزش" href="./service.html"> ورزش </a></li>
+                        <li><a title="عکس" href="./service.html"> عکس </a></li>
+                        <li><a title="چندرسانه ای" href="./service.html"> چندرسانه ای </a></li>
+                        <li><a title="نویسندگان مثلث" href="./service.html"> نویسندگان مثلث </a></li>
+                        <li><a title="تبلیغات" href="./service.html"> تبلیغات </a></li>
                     </ul>
                 </nav>
             </div>
@@ -108,7 +108,7 @@
                                     <!-----------------TITLE--------------->
                                     <h1>
                                         <a title="یارانه جدید 120 هزار تومانی به چه کسانی تعلق می گیرد؟
-                                        +جزئیات" href="#">یارانه جدید 120 هزار تومانی به چه کسانی تعلق می گیرد؟
+                                        +جزئیات" href="./news.html">یارانه جدید 120 هزار تومانی به چه کسانی تعلق می گیرد؟
                                             +جزئیات</a>
                                     </h1>
                                     <!-----------------LEAD--------------->
@@ -118,7 +118,7 @@
                                 </div>
                                 <div class="top-news-image">
                                     <a title="یارانه جدید 120 هزار تومانی به چه کسانی تعلق می گیرد؟
-                                    +جزئیات" href="#">
+                                    +جزئیات" href="./news.html">
                                         <img src="./images/یارانه.jpg" alt="یارانه">
                                     </a>
                                 </div>
