finish search and tags

--- a/news.html
+++ b/news.html
@@ -40,7 +40,7 @@
                             </time>
                             <form>
                                 <input type="search" placeholder="جستجو">
-                                <a title="جستجو" href="#"><i class="fa fa-search"></i></a>
+                                <a title="جستجو" href="./search.html"><i class="fa fa-search"></i></a>
                             </form>
                         </div>
                     </div>
@@ -111,7 +111,7 @@
                     </div>
                 </div>
                 <header>
-                    <h3 class="up-title" > امروز رئیس جمهور در تمامی نشست ها برخواست کرد و گفت :  </h3>
+                    <h3 class="up-title"> امروز رئیس جمهور در تمامی نشست ها برخواست کرد و گفت : </h3>
                     <h1 class="title">دانلود سریال کرگدن / دانلود قسمت اول سریال کرگدن</h1>
                     <div class="lead">دانلود سریال کرگدن دانلود قسمت اول سریال کرگدن دانلود قسمت 1 سریال کرگدن</div>
                     <div class="primary-file"> <a href="#"><img src="./images/kargadan.jpg" alt="">
@@ -278,11 +278,11 @@
                 <!--------------------------------------------TAGS-------------------------------------->
 
                 <div class="tags">
-                    <a href="#"> <i class="fa fa-tag"></i> ایران</a>
-                    <a href="#"> <i class="fa fa-tag"></i> سریال</a>
-                    <a href="#"> <i class="fa fa-tag"></i> کرگردن</a>
-                    <a href="#"> <i class="fa fa-tag"></i> دانلود</a>
-                    <a href="#"> <i class="fa fa-tag"></i> قسمت</a>
+                    <a href="./tags.html"> <i class="fa fa-tag"></i> ایران</a>
+                    <a href="./tags.html"> <i class="fa fa-tag"></i> سریال</a>
+                    <a href="./tags.html"> <i class="fa fa-tag"></i> کرگردن</a>
+                    <a href="./tags.html"> <i class="fa fa-tag"></i> دانلود</a>
+                    <a href="./tags.html"> <i class="fa fa-tag"></i> قسمت</a>
 
                 </div>
                 <!--------------------------------------------SHORT LINKS-------------------------------------->
