--- a/search.html
+++ b/search.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>پیوست ها</title>
-    <link rel="stylesheet" href="./css/tags.css">
+    <title>جست و جو</title>
+    <link rel="stylesheet" href="./css/search.css">
     <link rel="stylesheet" href="./css/global.css">
     <link rel="stylesheet" href="./css/all.min.css">
     <link rel="stylesheet" href="./css/normalize.css">
@@ -40,7 +40,7 @@
                             </time>
                             <form>
                                 <input type="search" placeholder="جستجو">
-                                <a title="جستجو" href="#"><i class="fa fa-search"></i></a>
+                                <a title="جستجو" href="./search.html"><i class="fa fa-search"></i></a>
                             </form>
                         </div>
                     </div>
@@ -94,7 +94,6 @@
             </div>
         </div>
     </header>
-    <!----------------------------------------------------------- START-------------------------------------->
     <main>
         <div class="margin-top"></div>
         <div class="wrapper">
@@ -242,8 +241,95 @@
                 <a title="اخبار بیشتر" class="more" href="#">بعدی</a>
                 </section>
             </div>
+            <!-----------------------------------------------PULL-LEFT------------------------------------->
+            <div class="pull-left">
+                <header>
+                    <span>
+                        جستجوی پیشرفته
+                    </span>
+                </header>
+                <form action="">
+                    <div class="keyword">
+                        <label for="keyword">کلمات کلیدی:</label>
+                        <input id="keyword" type="text">
+                    </div>
+                    <hr>
+                    <div class="start">
+                        <label for="day"> تاریخ آغاز :</label>
+                        <select name="day">
+                            <option value="0">1</option>
+                            <option value="1">2</option>
+                            <option value="2">3</option>
+                            <option value="3">4</option>
+                            <option value="4">5</option>
+                            <option value="5">6</option>
+                        </select>
+                        <select name="day">
+                            <option value="0">1</option>
+                            <option value="1">2</option>
+                            <option value="2">3</option>
+                            <option value="3">4</option>
+                            <option value="4">5</option>
+                            <option value="5">6</option>
+                        </select> <select name="day">
+                            <option value="0">1</option>
+                            <option value="1">2</option>
+                            <option value="2">3</option>
+                            <option value="3">4</option>
+                            <option value="4">5</option>
+                            <option value="5">6</option>
+                        </select>
+                    </div>
+                    <div class="end">
+                        <label for="day"> تاریخ پایان :</label>
+                        <select name="day">
+                            <option value="0">1</option>
+                            <option value="1">2</option>
+                            <option value="2">3</option>
+                            <option value="3">4</option>
+                            <option value="4">5</option>
+                            <option value="5">6</option>
+                        </select>
+                        <select name="day">
+                            <option value="0">1</option>
+                            <option value="1">2</option>
+                            <option value="2">3</option>
+                            <option value="3">4</option>
+                            <option value="4">5</option>
+                            <option value="5">6</option>
+                        </select> <select name="day">
+                            <option value="0">1</option>
+                            <option value="1">2</option>
+                            <option value="2">3</option>
+                            <option value="3">4</option>
+                            <option value="4">5</option>
+                            <option value="5">6</option>
+                        </select>
+                    </div>
+                    <hr>
+                    <div class="show">
+                        <label for="keyword">نمایش بر حسب :</label>
+                        <select name="show" id="show">
+                            <option value="0">1</option>
+                            <option value="1">1</option>
+                            <option value="2">1</option>
+                            <option value="3">1</option>
+                            <option value="4">1</option>
+                        </select>
+                    </div>
+                    <hr>
+                    <div class="options">
+                        <label for="#">سرویس :</label>
+                        <i class="fa fa-angle-left"></i>
+                    </div>
+                    <div class="options">
+                        <label for="#">نوع خبر :</label>
+                        <i class="fa fa-angle-left"></i>
+                    </div>
+                    <button>جستوجو</button>
+                </form>
+            </div>
         </div>
-
     </main>
 
 
