--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         </time>
                         <form>
                             <input type="search" placeholder="جستجو">
-                            <a title="جستجو" href="#"><i class="fa fa-search"></i></a>
+                            <a title="جستجو" href="./search.html"><i class="fa fa-search"></i></a>
                         </form>
                     </div>
                 </div>
