--- a/news.html
+++ b/news.html
@@ -55,7 +55,7 @@
                 </div>
                 <nav>
                     <ul>
-                        <li><a title="صفحه نخست" href="#"> صفحه نخست </a></li>
+                        <li><a title="صفحه نخست" href="./index.html"> صفحه نخست </a></li>
                         <li><a title="اخبار" href="./service.html"> اخبار </a></li>
                         <li><a title="سیاست" href="./service.html"> سیاست</a></li>
                         <li><a title="بین الملل" href="./service.html"> بین الملل</a></li>
@@ -71,13 +71,12 @@
                 </nav>
             </div>
         </div>
-        </div>
         <!--------------------------------NORMAL - NAVICATION-------------------------------->
         <div class="normal-nav">
             <div class="wrapper">
                 <nav>
                     <ul>
-                        <li><a title="صفحه نخست" href="#"> صفحه نخست </a></li>
+                        <li><a title="صفحه نخست" href="./index.html"> صفحه نخست </a></li>
                         <li><a title="اخبار" href="./service.html"> اخبار </a></li>
                         <li><a title="سیاست" href="./service.html"> سیاست</a></li>
                         <li><a title="بین الملل" href="./service.html"> بین الملل</a></li>
@@ -130,7 +129,9 @@
                 <!--------------------------------------------ECHO-DETAILS-------------------------------------->
 
                 <div class="echo-details">
-                    <audio controls preload="none" src="./1223.mp3" src="./1223.ogg">
+                    <audio controls preload="none">
+                    <source src="./1223.mp3"  type="audio/mp3" >
+                    <source src="./1223.ogg"  type="audio/ogg" > 
                     </audio>
                     <video controls src="./123.mp4">
                     </video>
@@ -327,7 +328,7 @@
                     </h3>
                 </header>
                 <div class="container">
-                    <form action="">
+                    <form>
                         <div class="form-right">
                             <label for="name">نام شما</label>
                             <input id="name" type="text">
@@ -560,10 +561,10 @@
                 <div class="img-creartor">
                     <img src="./images/aasaam.png" alt="logo">
                 </div>
+            </a>
                 <div class="text-creator">
                     <a href="#">طراحی سایت خبری و خبرگزاری آسام</a>
                 </div>
-            </a>
         </div>
     </footer>
 </body>
