--- a/search.html
+++ b/search.html
@@ -55,7 +55,7 @@
                 </div>
                 <nav>
                     <ul>
-                        <li><a title="صفحه نخست" href=""> صفحه نخست </a></li>
+                        <li><a title="صفحه نخست" href="./index.html"> صفحه نخست </a></li>
                         <li><a title="اخبار" href="#"> اخبار </a></li>
                         <li><a title="سیاست" href="#"> سیاست</a></li>
                         <li><a title="بین الملل" href="#"> بین الملل</a></li>
@@ -71,13 +71,12 @@
                 </nav>
             </div>
         </div>
-        </div>
         <!-----------------------------------------------NORMAL - NAVICATION-------------------------------->
         <div class="normal-nav">
             <div class="wrapper">
                 <nav>
                     <ul>
-                        <li><a title="صفحه نخست" href="#"> صفحه نخست </a></li>
+                        <li><a title="صفحه نخست" href="./index.html"> صفحه نخست </a></li>
                         <li><a title="اخبار" href="#"> اخبار </a></li>
                         <li><a title="سیاست" href="#"> سیاست</a></li>
                         <li><a title="بین الملل" href="#"> بین الملل</a></li>
@@ -102,7 +101,7 @@
                 <section class="second-subject">
                     <header class="header-news">
                         <h3>
-                            <a title="تیتر دوم" href="#">نتایج جستو جو :</a>
+                            <a title="تیتر دوم" href="#">نتایج جستجو :</a>
                         </h3>
                     </header>
                     <ul>
@@ -239,7 +238,6 @@
                     </ul>
                 </section>
                 <a title="اخبار بیشتر" class="more" href="#">بعدی</a>
-                </section>
             </div>
             <!-----------------------------------------------PULL-LEFT------------------------------------->
             <div class="pull-left">
@@ -248,14 +246,13 @@
                         جستجوی پیشرفته
                     </span>
                 </header>
-                <form action="">
+                <form>
                     <div class="keyword">
                         <label for="keyword">کلمات کلیدی:</label>
                         <input id="keyword" type="text">
                     </div>
-                    <hr>
                     <div class="start">
-                        <label for="day"> تاریخ آغاز :</label>
+                        <label> تاریخ آغاز :</label>
                         <select name="day">
                             <option value="0">1</option>
                             <option value="1">2</option>
@@ -281,8 +278,8 @@
                         </select>
                     </div>
                     <div class="end">
-                        <label for="day"> تاریخ پایان :</label>
-                        <select name="day">
+                        <label for="end"> تاریخ پایان :</label>
+                        <select id="end" name="day">
                             <option value="0">1</option>
                             <option value="1">2</option>
                             <option value="2">3</option>
@@ -306,7 +303,6 @@
                             <option value="5">6</option>
                         </select>
                     </div>
-                    <hr>
                     <div class="show">
                         <label for="keyword">نمایش بر حسب :</label>
                         <select name="show" id="show">
@@ -317,16 +313,15 @@
                             <option value="4">1</option>
                         </select>
                     </div>
-                    <hr>
                     <div class="options">
-                        <label for="#">سرویس :</label>
+                        <label>سرویس :</label>
                         <i class="fa fa-angle-left"></i>
                     </div>
                     <div class="options">
-                        <label for="#">نوع خبر :</label>
+                        <label>نوع خبر :</label>
                         <i class="fa fa-angle-left"></i>
                     </div>
-                    <button>جستوجو</button>
+                    <button>جستجو</button>
                 </form>
             </div>
         </div>
@@ -388,10 +383,10 @@
                 <div class="img-creartor">
                     <img src="./images/aasaam.png" alt="logo">
                 </div>
-                <div class="text-creator">
-                    <a href="#">طراحی سایت خبری و خبرگزاری آسام</a>
-                </div>
             </a>
+            <div class="text-creator">
+                <a href="#">طراحی سایت خبری و خبرگزاری آسام</a>
+            </div>
         </div>
     </footer>
 </body>
