--- a/service.html
+++ b/service.html
@@ -55,7 +55,7 @@
                 </div>
                 <nav>
                     <ul>
-                        <li><a title="صفحه نخست" href=""> صفحه نخست </a></li>
+                        <li><a title="صفحه نخست" href="./index.html"> صفحه نخست </a></li>
                         <li><a title="اخبار" href="#"> اخبار </a></li>
                         <li><a title="سیاست" href="#"> سیاست</a></li>
                         <li><a title="بین الملل" href="#"> بین الملل</a></li>
@@ -71,13 +71,12 @@
                 </nav>
             </div>
         </div>
-        </div>
         <!-----------------------------------------------NORMAL - NAVICATION-------------------------------->
         <div class="normal-nav">
             <div class="wrapper">
                 <nav>
                     <ul>
-                        <li><a title="صفحه نخست" href="#"> صفحه نخست </a></li>
+                        <li><a title="صفحه نخست" href="./index.html"> صفحه نخست </a></li>
                         <li><a title="اخبار" href="#"> اخبار </a></li>
                         <li><a title="سیاست" href="#"> سیاست</a></li>
                         <li><a title="بین الملل" href="#"> بین الملل</a></li>
@@ -104,10 +103,12 @@
                 <div class="top-news">
                     <section>
                         <div class="top-news-image">
-                            <a  title="قیمت پراید در بازار امروز اعلام شد +ثبت نام لاستیک پراید" href="#"><img src="./images/قیمت+پراید.jpg" alt=""> </a>
+                            <a title="قیمت پراید در بازار امروز اعلام شد +ثبت نام لاستیک پراید" href="#"><img
+                                    src="./images/قیمت+پراید.jpg" alt=""> </a>
                         </div>
                         <div class="top-news-detail">
-                            <h1 class="title"> <a  title="قیمت پراید در بازار امروز اعلام شد +ثبت نام لاستیک پراید" href="#">قیمت پراید در بازار امروز اعلام شد +ثبت نام لاستیک پراید</a>
+                            <h1 class="title"> <a title="قیمت پراید در بازار امروز اعلام شد +ثبت نام لاستیک پراید"
+                                    href="#">قیمت پراید در بازار امروز اعلام شد +ثبت نام لاستیک پراید</a>
                             </h1>
                             <hr>
                             <p class="lead">در بازار خودرو در شرایطی که پراید ۱۳۱ به رغم توقف چندماهه تولید همچنان کف
@@ -258,7 +259,6 @@
                     </ul>
                 </section>
                 <a title="اخبار بیشتر" class="more" href="#">اخبار بیشتر</a>
-                </section>
             </div>
             <!-----------------------------------------------PULL-LEFT------------------------------------->
 
@@ -285,7 +285,7 @@
                                             تا
                                             روحانی</a>
                                     </h4>
-                                    <a id="name-icon" title="عباس سلیمی‌ نمین" href="#"><i class="fa fa-edit">
+                                    <a class="name-icon" title="عباس سلیمی‌ نمین" href="#"><i class="fa fa-edit">
                                         </i>
                                         عباس سلیمی‌
                                         نمین
@@ -308,7 +308,7 @@
                                             ایرانی‌ها ضربه‌های مهلکی را بر پیکر آمریکایی‌ها وارد کرده‌اند
                                         </a>
                                     </h4>
-                                    <a id="name-icon" title="سعدالله زارعی" href="#"><i class="fa fa-edit"></i>
+                                    <a class="name-icon" title="سعدالله زارعی" href="#"><i class="fa fa-edit"></i>
                                         سعدالله زارعی
                                     </a>
                                 </div>
@@ -328,7 +328,7 @@
                                             کارگزاران به امید شکفتن ستاره بخت علی لاریجانی
                                         </a>
                                     </h4>
-                                    <a id="name-icon" title="صادق زیباکلام" href="#"><i class="fa fa-edit"></i>
+                                    <a class="name-icon" title="صادق زیباکلام" href="#"><i class="fa fa-edit"></i>
                                         صادق زیباکلام
                                     </a>
                                 </div>
@@ -349,7 +349,7 @@
                                             ترس وحشتناک در چهار تیم بزرگ ایران
                                         </a>
                                     </h4>
-                                    <a id="name-icon" title="جلال چراغپور" href="#"><i class="fa fa-edit"> </i>
+                                    <a class="name-icon" title="جلال چراغپور" href="#"><i class="fa fa-edit"> </i>
                                         جلال چراغپور
                                     </a>
                                 </div>
@@ -369,7 +369,7 @@
                                             جهل نتیجه جعل ؛ رازهای جریان تحریف
                                         </a>
                                     </h4>
-                                    <a id="name-icon" title="عباس سلیمی‌نمین" href="#"><i class="fa fa-edit">
+                                    <a class="name-icon" title="عباس سلیمی‌نمین" href="#"><i class="fa fa-edit">
                                         </i>
                                         عباس
                                         سلیمی‌نمین
@@ -391,7 +391,7 @@
                                             درباره هجرت از «خود» به «خدا»
                                         </a>
                                     </h4>
-                                    <a id="name-icon" title="عباس سلیمی‌نمین" href="#"><i class="fa fa-edit">
+                                    <a class="name-icon" title="عباس سلیمی‌نمین" href="#"><i class="fa fa-edit">
                                         </i>
                                         مصطفی صادقی
                                     </a>
@@ -411,7 +411,7 @@
                                         <a title="مذاکره بی مذاکره ؛ پایان رویای غرب باوری" href="#">
                                             مذاکره بی مذاکره ؛ پایان رویای غرب باوری </a>
                                     </h4>
-                                    <a id="name-icon" title="عباس سلیمی‌نمین" href="#"><i class="fa fa-edit">
+                                    <a class="name-icon" title="عباس سلیمی‌نمین" href="#"><i class="fa fa-edit">
                                         </i>
                                         جعفر قنادباشی
                                     </a>
@@ -432,7 +432,7 @@
                                             جهل نتیجه جعل ؛ رازهای جریان تحریف
                                         </a>
                                     </h4>
-                                    <a id="name-icon" title="عباس سلیمی‌نمین" href="#"><i class="fa fa-edit">
+                                    <a class="name-icon" title="عباس سلیمی‌نمین" href="#"><i class="fa fa-edit">
                                         </i>
                                         عباس
                                         سلیمی‌نمین
@@ -659,10 +659,10 @@
                 <div class="img-creartor">
                     <img src="./images/aasaam.png" alt="logo">
                 </div>
+            </a>
                 <div class="text-creator">
                     <a href="#">طراحی سایت خبری و خبرگزاری آسام</a>
                 </div>
-            </a>
         </div>
     </footer>
 </body>
