--- a/tags.html
+++ b/tags.html
@@ -55,7 +55,7 @@
                 </div>
                 <nav>
                     <ul>
-                        <li><a title="صفحه نخست" href=""> صفحه نخست </a></li>
+                        <li><a title="صفحه نخست" href="./index.html"> صفحه نخست </a></li>
                         <li><a title="اخبار" href="#"> اخبار </a></li>
                         <li><a title="سیاست" href="#"> سیاست</a></li>
                         <li><a title="بین الملل" href="#"> بین الملل</a></li>
@@ -71,13 +71,12 @@
                 </nav>
             </div>
         </div>
-        </div>
         <!-----------------------------------------------NORMAL - NAVICATION-------------------------------->
         <div class="normal-nav">
             <div class="wrapper">
                 <nav>
                     <ul>
-                        <li><a title="صفحه نخست" href="#"> صفحه نخست </a></li>
+                        <li><a title="صفحه نخست" href="./index.html"> صفحه نخست </a></li>
                         <li><a title="اخبار" href="#"> اخبار </a></li>
                         <li><a title="سیاست" href="#"> سیاست</a></li>
                         <li><a title="بین الملل" href="#"> بین الملل</a></li>
@@ -240,7 +239,6 @@
                     </ul>
                 </section>
                 <a title="اخبار بیشتر" class="more" href="#">بعدی</a>
-                </section>
             </div>
         </div>
 
@@ -302,10 +300,10 @@
                 <div class="img-creartor">
                     <img src="./images/aasaam.png" alt="logo">
                 </div>
+            </a>
                 <div class="text-creator">
                     <a href="#">طراحی سایت خبری و خبرگزاری آسام</a>
                 </div>
-            </a>
         </div>
     </footer>
 </body>
