fix the problem

--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                                                     تا
                                                     روحانی</a>
                                             </h4>
-                                            <a class=".name-icon" title="عباس سلیمی‌ نمین" href="#"><i class="fa fa-edit">
+                                            <a class="name-icon" title="عباس سلیمی‌ نمین" href="#"><i class="fa fa-edit">
                                                 </i>
                                                 عباس سلیمی‌
                                                 نمین
@@ -343,7 +343,7 @@
                                                     ایرانی‌ها ضربه‌های مهلکی را بر پیکر آمریکایی‌ها وارد کرده‌اند
                                                 </a>
                                             </h4>
-                                            <a class=".name-icon" title="سعدالله زارعی" href="#"><i class="fa fa-edit"></i>
+                                            <a class="name-icon" title="سعدالله زارعی" href="#"><i class="fa fa-edit"></i>
                                                 سعدالله زارعی
                                             </a>
                                         </div>
@@ -363,7 +363,7 @@
                                                     کارگزاران به امید شکفتن ستاره بخت علی لاریجانی
                                                 </a>
                                             </h4>
-                                            <a class=".name-icon" title="صادق زیباکلام" href="#"><i class="fa fa-edit"></i>
+                                            <a class="name-icon" title="صادق زیباکلام" href="#"><i class="fa fa-edit"></i>
                                                 صادق زیباکلام
                                             </a>
                                         </div>
@@ -384,7 +384,7 @@
                                                     ترس وحشتناک در چهار تیم بزرگ ایران
                                                 </a>
                                             </h4>
-                                            <a class=".name-icon" title="جلال چراغپور" href="#"><i class="fa fa-edit"> </i>
+                                            <a class="name-icon" title="جلال چراغپور" href="#"><i class="fa fa-edit"> </i>
                                                 جلال چراغپور
                                             </a>
                                         </div>
@@ -404,7 +404,7 @@
                                                     جهل نتیجه جعل ؛ رازهای جریان تحریف
                                                 </a>
                                             </h4>
-                                            <a class=".name-icon" title="عباس سلیمی‌نمین" href="#"><i class="fa fa-edit">
+                                            <a class="name-icon" title="عباس سلیمی‌نمین" href="#"><i class="fa fa-edit">
                                                 </i>
                                                 عباس
                                                 سلیمی‌نمین
@@ -426,7 +426,7 @@
                                                     درباره هجرت از «خود» به «خدا»
                                                 </a>
                                             </h4>
-                                            <a class=".name-icon" title="عباس سلیمی‌نمین" href="#"><i class="fa fa-edit">
+                                            <a class="name-icon" title="عباس سلیمی‌نمین" href="#"><i class="fa fa-edit">
                                                 </i>
                                                 مصطفی صادقی
                                             </a>
@@ -446,7 +446,7 @@
                                                 <a title="مذاکره بی مذاکره ؛ پایان رویای غرب باوری" href="#">
                                                     مذاکره بی مذاکره ؛ پایان رویای غرب باوری </a>
                                             </h4>
-                                            <a class=".name-icon" title="عباس سلیمی‌نمین" href="#"><i class="fa fa-edit">
+                                            <a class="name-icon" title="عباس سلیمی‌نمین" href="#"><i class="fa fa-edit">
                                                 </i>
                                                 جعفر قنادباشی
                                             </a>
@@ -467,7 +467,7 @@
                                                     جهل نتیجه جعل ؛ رازهای جریان تحریف
                                                 </a>
                                             </h4>
-                                            <a class=".name-icon" title="عباس سلیمی‌نمین" href="#"><i class="fa fa-edit">
+                                            <a class="name-icon" title="عباس سلیمی‌نمین" href="#"><i class="fa fa-edit">
                                                 </i>
                                                 عباس
                                                 سلیمی‌نمین
