--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <link rel="stylesheet" href="./css/global.css">
     <link rel="stylesheet" href="./css/all.min.css">
     <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/lightslider.css">
     <link rel="icon" href="./favicon.ico" type="image/gif">
     <script src="./js/jquery-3.5.1.min.js"></script>
+    <script src="./js/lightslider.js"></script>
     <script src="./js/main.js"></script>
 </head>
 <!--------------------------------START------------------------------------->
@@ -117,11 +119,24 @@
                                         در راستای کاهش قدرت خرید کالای اساسی از سوی مردم، مجلس و دولت برای اقشار ضعیف
                                         جامعه یارانه جدیدی را در نظر گرفته اند. </p>
                                 </div>
-                                <div class="top-news-image" itemscope itemtype="https://schema.org/ImageObject"> >
-                                    <a title="یارانه جدید 120 هزار تومانی به چه کسانی تعلق می گیرد؟
-                                    +جزئیات" href="./news.html">
-                                        <img src="./images/یارانه.jpg" alt="یارانه" itemprop="Image">
-                                    </a>
+                                <div class="top-news-image" itemscope itemtype="https://schema.org/ImageObject">
+                                    <ul id="lightSlider">
+                                        <li>
+                                            <img src="./images/آژانس.jpg" alt="">
+                                        </li>
+                                        <li>
+                                            <img src="./images/آژانس.jpg" alt="">
+                                        </li>
+                                        <li>
+                                            <img src="./images/آژانس.jpg" alt="">
+                                        </li>
+                                        <li>
+                                            <img src="./images/آژانس.jpg" alt="">
+                                        </li>
+                                        <li>
+                                            <img src="./images/آژانس.jpg" alt="">
+                                        </li>
+                                    </ul>
                                 </div>
                             </div>
                         </section>
