--- a/service.html
+++ b/service.html
@@ -9,8 +9,10 @@
     <link rel="stylesheet" href="./css/global.css">
     <link rel="stylesheet" href="./css/all.min.css">
     <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/lightslider.css">
     <link rel="icon" href="./favicon.ico" type="image/gif">
     <script src="./js/jquery-3.5.1.min.js"></script>
+    <script src="./js/lightslider.js"></script>
     <script src="./js/main.js"></script>
 </head>
 <!--------------------------------------------START-------------------------------------->
@@ -103,8 +105,24 @@
                 <div class="top-news">
                     <section>
                         <div class="top-news-image">
-                            <a title="قیمت پراید در بازار امروز اعلام شد +ثبت نام لاستیک پراید" href="#"><img
-                                    src="./images/قیمت+پراید.jpg" alt=""> </a>
+                            <ul id="lightSlider">
+                                <li>
+                                    <img src="./images/قیمت+پراید.jpg" alt="">
+                                </li>
+                                <li>
+                                    <img src="./images/قیمت+پراید.jpg" alt="">
+                                </li>
+                                <li>
+                                    <img src="./images/قیمت+پراید.jpg" alt="">
+                                </li>
+                                <li>
+                                    <img src="./images/قیمت+پراید.jpg" alt="">
+                                </li>
+                                <li>
+                                    <img src="./images/قیمت+پراید.jpg" alt="">
+                                </li>
+                            </ul>
+
                         </div>
                         <div class="top-news-detail">
                             <h1 class="title"> <a title="قیمت پراید در بازار امروز اعلام شد +ثبت نام لاستیک پراید"
@@ -660,9 +678,9 @@
                     <img src="./images/aasaam.png" alt="logo">
                 </div>
             </a>
-                <div class="text-creator">
-                    <a href="#">طراحی سایت خبری و خبرگزاری آسام</a>
-                </div>
+            <div class="text-creator">
+                <a href="#">طراحی سایت خبری و خبرگزاری آسام</a>
+            </div>
         </div>
     </footer>
 </body>
